# Candela

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: Dependencies.cmake
docs/: ROADMAP.md  audio-design.md  physics-design.md  skeletal-animation-design.md
editor/: CMakeLists.txt
editor/src/: Commands.cpp  Commands.h  EditorApp.cpp  EditorApp.h  main.cpp
engine/: CMakeLists.txt
engine/src/candela/assets/: AnimationInfo.cpp  AnimationInfo.h  AnimationSampling.h  AssetRegistry.cpp  AssetRegistry.h  BlendImporter.cpp  BlendImporter.h  ModelAsset.cpp  ModelAsset.h  StbUsage.cpp
engine/src/candela/audio/: AudioEngine.cpp  AudioEngine.h  AudioSystem.cpp  AudioSystem.h  MiniaudioImpl.cpp
engine/src/candela/core/: Compiler.h  Events.h  Jobs.cpp  Jobs.h  Log.cpp  Log.h
engine/src/candela/physics/: PhysicsSystem.cpp  PhysicsSystem.h
engine/src/candela/platform/: Input.cpp  Input.h  Window.cpp  Window.h
engine/src/candela/renderer/: Camera.cpp  Camera.h  Cascades.cpp  Cascades.h  IBL.cpp  IBL.h  Renderer.cpp  Renderer.h
engine/src/candela/rhi/: Bindless.cpp  Bindless.h  Context.cpp  Context.h  DeletionQueue.h  RenderGraph.cpp  RenderGraph.h  Resources.cpp  Resources.h  ShaderCompiler.cpp  ShaderCompiler.h  Swapchain.cpp  Swapchain.h  VmaUsage.cpp  VulkanCommon.h
engine/src/candela/scene/: Components.h  GltfScene.cpp  GltfScene.h  SceneSerializer.cpp  SceneSerializer.h  StbUsage.cpp  World.cpp  World.h
game/: CMakeLists.txt  README.md
game/common/: Grid.h
game/content/: candle.glb
game/emberwake/: CMakeLists.txt  README.md
game/emberwake/content/: bolt.glb  brazier.glb  dfloor.glb  dwall.glb  hollow.glb  pickups.glb  rift.glb  shade.glb  smother.glb  wisp.glb
game/emberwake/src/: Dungeon.h  DungeonTest.cpp  main.cpp
game/lightkeeper/: CMakeLists.txt  README.md
game/lightkeeper/content/: floor.glb  wall.glb
game/lightkeeper/src/: Level.h  LevelTest.cpp  main.cpp
game/src/: Level.h
game/tumble/: CMakeLists.txt  README.md
game/tumble/src/: main.cpp
sandbox/: AnimationSamplingTest.cpp  CMakeLists.txt  main.cpp
scripts/: build.ps1  get-assets.ps1
shaders/: ao.slang  bloom.slang  common.slang  fullscreen.slang  gbuffer.slang  ibl.slang  lighting.slang  mesh.slang  reflections.slang  shadow.slang  skinning.slang  temporal.slang  tonemap.slang
